@@ -181,6 +181,7 @@ def File(filename, options=None, easy=False):
         from mutagen.oggspeex import OggSpeex
         from mutagen.oggtheora import OggTheora
         from mutagen.oggvorbis import OggVorbis
+        from mutagen.oggopus import OggOpus
         if easy:
             from mutagen.trueaudio import EasyTrueAudio as TrueAudio
         else:
@@ -195,7 +196,7 @@ def File(filename, options=None, easy=False):
         from mutagen.optimfrog import OptimFROG
         options = [MP3, TrueAudio, OggTheora, OggSpeex, OggVorbis, OggFLAC,
                    FLAC, APEv2File, MP4, ID3FileType, WavPack, Musepack,
-                   MonkeysAudio, OptimFROG, ASF]
+                   MonkeysAudio, OptimFROG, ASF, OggOpus]
 
     if not options:
         return None
