@@ -28,6 +28,7 @@
  * MP4:
    * Less strict MP4 covr atom parsing. (#86, Lukáš Lalinský)
    * Support atoms that extend to the end of the file. (#109, Sidnei da Silva)
+ * OggOpus support. (#115, Christoph Reiter)
 
 1.20 - 2010.08.04
  * ASF: Don't store blocks over 64K in the MetadataObject block;
